--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>롤 포지션 랜덤 팀</title>
   <style>
-    body { font-family: Arial, sans-serif; background:#f3f4f6; padding:40px; }
+body {
+  font-family: Arial, sans-serif;
+  background:#f3f4f6;
+
+  min-height: 100vh;
+  margin: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
     .wrap { display:flex; gap:40px; align-items:flex-start; justify-content:center; }
     table { border-collapse: collapse; min-width:260px; }
     th, td { border:1px solid #000; padding:8px 12px; text-align:center; font-weight:bold; }
