--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body {
 <div class="wrap">
   <!-- 입력 테이블 -->
   <table>
-    <tr><th></th><th class="red">레드</th><th class="blue">블루</th></tr>
+    <tr><th colspan="3">멤버 적는곳</th></tr>
     <tr><th>탑</th><td><input id="top1"></td><td><input id="top2"></td></tr>
     <tr><th>정글</th><td><input id="jg1"></td><td><input id="jg2"></td></tr>
     <tr><th>미드</th><td><input id="mid1"></td><td><input id="mid2"></td></tr>
@@ -51,7 +51,7 @@ body {
 
   <!-- 결과 테이블 -->
   <table>
-    <tr><th colspan="3">멤버 적군</th></tr>
+<tr><th></th><th class="red">레드</th><th class="blue">블루</th></tr>
     <tr><th>탑</th><td id="r_top"></td><td id="b_top"></td></tr>
     <tr><th>정글</th><td id="r_jg"></td><td id="b_jg"></td></tr>
     <tr><th>미드</th><td id="r_mid"></td><td id="b_mid"></td></tr>
