Update title from '롤 포지션 랜덤 팀' to '롤 랜덤팀 섞기'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>롤 포지션 랜덤 팀</title>
+  <title>롤 랜덤팀 섞기</title>
   <style>
 body {
   font-family: Arial, sans-serif;
