--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   th { background:#e5e7eb; }
   .red { background:#fca5a5; }
   .blue { background:#93c5fd; }
-  button { padding:14px 30px; font-size:16px; font-weight:bold; cursor:pointer; }
+  <button type="button" onclick="shuffleTeams()">랜덤 섞기</button>
 </style>
 
 </head>
