--- a/index.html
+++ b/index.html
@@ -3,34 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>롤 랜덤팀 섞기</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background:#f3f4f6;
-    min-height: 100vh;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .wrap {
-    display:flex;
-    gap:40px;
-    align-items:flex-start;
-    justify-content:center;
-    transform: translateY(40px);
-  }
-
-  table { border-collapse: collapse; min-width:260px; }
-  th, td { border:1px solid #000; padding:8px 12px; text-align:center; font-weight:bold; }
-  th { background:#e5e7eb; }
-  .red { background:#fca5a5; }
-  .blue { background:#93c5fd; }
-  <button type="button" onclick="shuffleTeams()">랜덤 섞기</button>
-</style>
-
+  <title>롤 5:5 랜덤팀 나누기</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background:#f3f4f6;
+      min-height:100vh;
+      margin:0;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+    }
+    .wrap {
+      display:flex;
+      gap:40px;
+      align-items:flex-start;
+      justify-content:center;
+      transform: translateY(40px);
+    }
+    table { border-collapse: collapse; min-width:260px; background:#fff; }
+    th, td { border:1px solid #000; padding:8px 12px; text-align:center; font-weight:bold; }
+    th { background:#e5e7eb; }
+    .red { background:#fca5a5; }
+    .blue { background:#93c5fd; }
+    button {
+      padding: 20px 36px;
+      font-size: 20px;
+      font-weight: 800;
+      cursor: pointer;
+      background: linear-gradient(135deg, #1e3a8a, #2563eb);
+      color: #e5e7eb;
+      border: none;
+      border-radius: 14px;
+      box-shadow: 0 10px 25px rgba(37,99,235,0.45);
+    }
+    button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 14px 35px rgba(37,99,235,0.65);
+    }
+    button:active {
+      transform: scale(0.98);
+    }
+  </style>
 </head>
 <body>
 
@@ -40,12 +54,19 @@
     <tr><th colspan="3">멤버 적는곳</th></tr>
     <tr><th>탑</th><td><input id="top1"></td><td><input id="top2"></td></tr>
     <tr><th>정글</th><td><input id="jg1"></td><td><input id="jg2"></td></tr>
-    <tr><th>미드</th><td><input id="mid1"></td><td><input id="mid2"></td></tr>
+    <tr>
+      <th>미드</th>
+      <td><input id="mid1"></td>
+      <td><input id="mid2"></td>
+    </tr>
+    <tr>
+      <td colspan="3" style="text-align:center; padding:18px;">
+        <button type="button" onclick="shuffleTeams()">🎲 랜덤 섞기</button>
+      </td>
+    </tr>
     <tr><th>원딜</th><td><input id="adc1"></td><td><input id="adc2"></td></tr>
     <tr><th>서폿</th><td><input id="sup1"></td><td><input id="sup2"></td></tr>
   </table>
-
-  <button onclick="shuffleTeams()">랜덤 섞기</button>
 
   <!-- 결과 테이블 -->
   <table>
@@ -69,22 +90,27 @@ function shuffleTeams() {
   ];
 
   for (const [key,a,b] of roles) {
-    const p1 = document.getElementById(a).value;
-    const p2 = document.getElementById(b).value;
+    const p1 = document.getElementById(a).value.trim();
+    const p2 = document.getElementById(b).value.trim();
 
     if (!p1 || !p2) {
       alert('모든 포지션에 2명씩 입력하세요');
       return;
     }
 
-    document.getElementById('r_'+key).textContent = p1;
-    document.getElementById('b_'+key).textContent = p2;
-  }
+    const r = document.getElementById('r_' + key);
+    const bl = document.getElementById('b_' + key);
 
-  alert('결과 출력 완료');
+    if (Math.random() < 0.5) {
+      r.textContent = p1;
+      bl.textContent = p2;
+    } else {
+      r.textContent = p2;
+      bl.textContent = p1;
+    }
+  }
 }
 </script>
-
 
 </body>
 </html>
