Add ADC and Support rows to the table

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
       <td><input id="mid1"></td>
       <td><input id="mid2"></td>
     </tr>
-    </table>
+    <tr><th>원딜</th><td><input id="adc1"></td><td><input id="adc2"></td></tr>
+    <tr><th>서폿</th><td><input id="sup1"></td><td><input id="sup2"></td></tr>
+  </table>
 
   <!-- 중앙 버튼 -->
   <div id="centerBtn" class="center-btn">
