Refactor member input table structure
Removed duplicate member input tables and organized the structure.

--- a/index.html
+++ b/index.html
@@ -56,28 +56,44 @@
 
 <div class="wrap">
   <!-- 입력 테이블 -->
-  <table>
-    <tr><th colspan="3">멤버 적는곳</th></tr>
-    <tr><th>탑</th><td><input id="top1"></td><td><input id="top2"></td></tr>
-    <tr><th>정글</th><td><input id="jg1"></td><td><input id="jg2"></td></tr>
-    <tr id="mid-row">
-      <th>미드</th>
-      <td><input id="mid1"></td>
-      <td><input id="mid2"></td>
-    </tr>
-    <tr><th>원딜</th><td><input id="adc1"></td><td><input id="adc2"></td></tr>
-    <tr><th>서폿</th><td><input id="sup1"></td><td><input id="sup2"></td></tr>
-  </table>
+<table>
+  <tr><th colspan="3">멤버 적는곳</th></tr>
+
+  <tr>
+    <th>탑</th>
+    <td><input id="top1"></td>
+    <td><input id="top2"></td>
+  </tr>
+
+  <tr>
+    <th>정글</th>
+    <td><input id="jg1"></td>
+    <td><input id="jg2"></td>
+  </tr>
+
+  <tr id="mid-row">
+    <th>미드</th>
+    <td><input id="mid1"></td>
+    <td><input id="mid2"></td>
+  </tr>
+
+  <tr>
+    <th>원딜</th>
+    <td><input id="adc1"></td>
+    <td><input id="adc2"></td>
+  </tr>
+
+  <tr>
+    <th>서폿</th>
+    <td><input id="sup1"></td>
+    <td><input id="sup2"></td>
+  </tr>
+</table>
 
   <!-- 중앙 버튼 -->
   <div id="centerBtn" class="center-btn">
     <button type="button" onclick="shuffleTeams()">🎲 랜덤 섞기</button>
   </div>
-
-  <table>
-    <tr><th>원딜</th><td><input id="adc1"></td><td><input id="adc2"></td></tr>
-    <tr><th>서폿</th><td><input id="sup1"></td><td><input id="sup2"></td></tr>
-  </table>
 
   <!-- 결과 테이블 -->
   <table>
