--- a/index.html
+++ b/index.html
@@ -38,13 +38,16 @@
       background:#020617;
       letter-spacing:1px;
     }
-    input {
-      background:#020617;
-      border:1px solid #334155;
-      color:#e5e7eb;
-      padding:8px 10px;
-      border-radius:8px;
-      width:100%;
+input {
+  background: #020617;
+  border: 1px solid #334155;
+  color: #e5e7eb;
+  padding: 8px 10px;
+  border-radius: 8px;
+  width: 100%;
+  box-sizing: border-box; /* ⭐ 핵심 */
+}
+
     }
     input:focus {
       outline:none;
