--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ input {
   padding: 8px 10px;
   border-radius: 8px;
   width: 100%;
-  box-sizing: border-box; /* ⭐ 핵심 */
+  box-sizing: border-box;
 }
 
     }
