--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
       align-items:flex-start;
       justify-content:center;
     }
-    table {
-      border-collapse: collapse;
-      min-width:260px;
-      background: linear-gradient(180deg, #020617, #0f172a);
-      box-shadow: 0 20px 60px rgba(0,0,0,.7);
-    }
+table {
+  border-collapse: collapse;
+  min-width: 260px;
+  background: linear-gradient(180deg, #020617, #0b1220);
+  border: 1px solid #1e293b;
+  box-shadow:
+    inset 0 0 0 1px rgba(255,215,0,0.08),
+    0 20px 60px rgba(0,0,0,.8);
+}
+
     th, td {
       border:1px solid #334155;
       padding:8px 12px;
