--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
   <style>
     body {
       font-family: "Segoe UI", Arial, sans-serif;
-      background: radial-gradient(circle at top, #020617, #000);
+      background:
+        radial-gradient(circle at top, rgba(37,99,235,0.15), transparent 40%),
+        radial-gradient(circle at bottom, rgba(250,204,21,0.08), transparent 45%),
+        linear-gradient(180deg, #020617, #000);
       min-height: 100vh;
       margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       overflow: hidden;
+    }
     }
 
     .wrap {
